feat: set English as default language in dropdown
Modified the language selection dropdown to default to English by marking the 'en' option as selected. Enhances user experience by pre-selecting the most commonly used language. This may help users who are primarily English speakers to have a faster and more intuitive interaction with the form.

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
             </select>
             <select name="lang" id="lang">
             {% for key, value in languages.items() %}
-                <option value="{{ key }}">{{ value["name"] }}</option>
+                <option {% if key == "en" %}selected="selected"{% endif %} value="{{ key }}">{{ value["name"] }}</option>
             {% endfor %}
             </select>
             <input type="text" name="query" id="query" placeholder="Search Wikipedia" required>
