--- a/src/wikimore/static/css/style.css
+++ b/src/wikimore/static/css/style.css
@@ -94,7 +94,7 @@ h1 {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    max-width: 100%;
     margin: 10px 0;
 }
 
@@ -128,7 +128,6 @@ h1 {
     margin: 1em auto;
     font-size: small;
     border-collapse: collapse;
-    width: 100%;
     max-width: 100%;
     background-color: #f9f9f9;
     border: 1px solid #ddd;
@@ -298,7 +297,7 @@ h1 {
     padding: 10px;
     font-size: small;
     border-collapse: collapse;
-    width: 100%;
+    max-width: 100%;
     margin: 10px 0;
     display: flex;
     flex-direction: column;
@@ -385,7 +384,7 @@ figure,
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     display: inline-block;
-    width: 100%;
+    max-width: 100%;
     display: block;
     margin: 10px 0;
     overflow-x: auto;
@@ -464,25 +463,25 @@ span {
     }
 
     .sidebar {
-        width: 100%;
+        max-width: 100%;
         margin: 10px 0;
         float: none;
     }
 
     .table {
-        width: 100%;
+        max-width: 100%;
         overflow-x: auto;
     }
 
     .infobox {
-        width: 100%;
+        max-width: 100%;
         margin: 10px 0;
         float: none;
     }
 
     figure,
     .tmulti {
-        width: 100%;
+        max-width: 100%;
         display: block;
         margin: 10px 0;
     }
@@ -513,7 +512,7 @@ span {
     }
 
     .sidebar {
-        width: 100%;
+        max-width: 100%;
         margin: 5px 0;
     }
 
@@ -523,13 +522,13 @@ span {
     }
 
     .infobox {
-        width: 100%;
+        max-width: 100%;
         margin: 5px 0;
     }
 
     figure,
     .tmulti {
-        width: 100%;
+        max-width: 100%;
         margin: 5px 0;
     }
 }
