feat(css): Add class for default size adjustment
Added `.mw-default-size` CSS class with `width: fit-content` to ensure elements with this class adjust width based on their content. This enhancement improves the layout for dynamically sized components, ensuring they are appropriately sized without overflow issues.

--- a/src/wikimore/static/css/style.css
+++ b/src/wikimore/static/css/style.css
@@ -427,6 +427,10 @@ figcaption,
     margin-left: 1em;
 }
 
+.mw-default-size {
+    width: fit-content;
+}
+
 /* Reference styling */
 .reflist-lower-alpha .references {
     list-style-type: lower-alpha;
