--- a/src/wikimore/templates/article.html
+++ b/src/wikimore/templates/article.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>{{ title }}</h1>
-    <p>{{ content|safe }}</p>
+    <h1 class="title{% if rtl %} title-rtl{% endif %}">{{ title }}</h1>
+    {{ content|safe }}
 {% endblock %}
