feat: improve language and project handling
- Default values for `lang` and `project` added in `render_template` to ensure consistent rendering parameters.
- Included `lang` and `project` parameters in error and article templates for better context in error messages.
- Enhanced search form in base template to persist selected `lang` and `project` improving user experience.

These changes provide a more consistent and localized user experience by maintaining language and project context across different parts of the application.

Fixes #17.

--- a/src/wikimore/templates/base.html
+++ b/src/wikimore/templates/base.html
@@ -12,12 +12,12 @@
         <form id="search-form" action="{{ url_for('search') }}" method="post">
             <select name="project" id="project">
             {% for key, value in wikimedia_projects.items() %}
-                <option value="{{ key }}">{{ value }}</option>
+                <option {% if key == project %}selected="selected"{% endif %} value="{{ key }}">{{ value }}</option>
             {% endfor %}
             </select>
             <select name="lang" id="lang">
             {% for key, value in languages.items() %}
-                <option {% if key == "en" %}selected="selected"{% endif %} value="{{ key }}">{{ value["name"] }}</option>
+                <option {% if key == lang %}selected="selected"{% endif %} value="{{ key }}">{{ value["name"] }}</option>
             {% endfor %}
             </select>
             <input type="text" name="query" id="query" placeholder="Search Wikipedia">
